# keinontolibrary

./: .dockerignore  .gitignore  CNAME  Cargo.toml  Dockerfile  LICENSE  LICENSING.md  README.md  audit.toml  index.html  style.css
.claude/skills/finnish-testgen/: SKILL.md
.claude/skills/finnish-testgen/scripts/: gen_compound_gold.py  gen_pronouns.py  gen_special_numerals.py  mint_testdata.py
.github/workflows/: ci.yml  import-reports.yml  install-test.yml  pages.yml
bindings/python/: Cargo.toml  README.md  build-wheel.sh  publish.sh  pyproject.toml
bindings/python/keinontolibrary/: __init__.py  __main__.py  _keinontolibrary.pyi
bindings/python/src/: lib.rs
crates/keinontolibrary-cli/: Cargo.toml
crates/keinontolibrary-cli/src/: main.rs
crates/keinontolibrary-core/: Cargo.toml
crates/keinontolibrary-core/src/: case.rs  engine.rs  error.rs  forms.rs  lib.rs  normalize.rs  paradigm_ref.rs
crates/keinontolibrary-core/tests/: normalize_props.rs
crates/keinontolibrary-data/: Cargo.toml
crates/keinontolibrary-data/src/: artifact.rs  lib.rs  overlay.rs  store.rs
crates/keinontolibrary-ffi/: Cargo.toml
crates/keinontolibrary-ffi/src/: lib.rs
crates/keinontolibrary-ingest/: Cargo.toml
crates/keinontolibrary-ingest/src/: kotus.rs  lib.rs  main.rs  pipeline.rs  voikko.rs
crates/keinontolibrary-ingest/tests/: corpus_roundtrip.rs  synthetic_ingest.rs
crates/keinontolibrary-rules/: Cargo.toml  exceptions.toml
crates/keinontolibrary-rules/src/: exceptions.rs  generate.rs  gradation.rs  harmony.rs  lib.rs
crates/keinontolibrary-rules/tests/: compound.rs  generate_props.rs  parity.rs
crates/keinontolibrary-server/: Cargo.toml
crates/keinontolibrary-server/src/: lib.rs  main.rs
data/: alternant-overrides.jsonl  citation-overrides.jsonl  comitative-overrides.jsonl  harmony-overrides.jsonl  overlay.jsonl
data/artifact/: .gitkeep
data/content/: README.md  irregulars.json
docs/: DISTRIBUTION.md  PUBLISHING.md  SITE_PLAN.md  SUMMARY.md  book.toml  compound-nouns.md  how-it-works.md  improvement-plan-2026-06.md  intro.md  roadmap-100-percent.md
docs/guides/: README.md  build-artifact.md  cli.md  contributing.md  embed-rust.md  http-service.md
docs/theme/: head.hbs
guide/: 404.html  compound-nouns.html  how-it-works.html  index.html  intro.html  print.html  searcher-09f2665d.js  searchindex-8285be42.js  searchindex-e9732ece.js  toc-1e24a099.js  toc-b54f4d2a.js  toc.html
guide/guides/: build-artifact.html  cli.html  contributing.html  embed-rust.html  http-service.html
metrics/: README.md  chart.py  linkedin-post.md  metrics.json
packaging/homebrew/: README.md  keinontolibrary.rb  update-shas.sh
qa/: accepted.jsonl  baseline.json  coverage-misses.tsv
scripts/: build-site.sh  import-reports.mjs  publish-site.sh
scripts/qa/: README.md  gen_alternant_overrides.py  gen_citation_overrides.py  gen_comitative_overrides.py  gen_content.py  gen_harmony_overrides.py  report.py  run.sh  verify_voikko.py
site/: index.html
