[workspace]
resolver = "2"
members = [
    "crates/keinontolibrary-core",
    "crates/keinontolibrary-rules",
    "crates/keinontolibrary-ingest",
    "crates/keinontolibrary-data",
    "crates/keinontolibrary-server",
    "crates/keinontolibrary-cli",
    "crates/keinontolibrary-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# 1.85 is the real floor: the toml → indexmap → hashbrown 0.17 chain (parsing the
# exception registry) requires edition2024, stabilized in 1.85.
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/timokoola/keinontolibrary"
authors = ["Timo Koola"]

# Lints applied across the whole workspace. Each crate opts in with
# `[lints] workspace = true`. CI runs `cargo clippy --all-targets -- -D warnings`,
# so anything below at `warn` is enforced as an error in CI.
[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic allowances: these pedantic lints fire often and add little value here.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
# Internal crates
keinontolibrary-core = { path = "crates/keinontolibrary-core", version = "0.1.0" }
keinontolibrary-rules = { path = "crates/keinontolibrary-rules", version = "0.1.0" }
keinontolibrary-data = { path = "crates/keinontolibrary-data", version = "0.1.0" }
keinontolibrary-ingest = { path = "crates/keinontolibrary-ingest", version = "0.1.0" }

# Shared third-party deps (versions pinned here, enabled per-crate)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-normalization = "0.1"
thiserror = "2"
anyhow = "1"
bincode = "1.3"
rayon = "1"
clap = { version = "4", features = ["derive", "env"] }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower-http = { version = "0.6", features = ["trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
subtle = "2"
crc32fast = "1"
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
