[package]
name = "keinontolibrary-cli"
description = "Command-line interface: decline, paradigm, add, override, validate."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "keinontolibrary"
path = "src/main.rs"

[dependencies]

[lints]
workspace = true
