[package]
name = "keinontolibrary-cli"
description = "Command-line interface: decline, paradigm, table, add, override, validate, selftest."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "keinontolibrary"
path = "src/main.rs"

[dependencies]
keinontolibrary-core = { workspace = true, features = ["serde"] }
keinontolibrary-data = { workspace = true }
keinontolibrary-rules = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
