[package]
name = "keinontolibrary-core"
description = "Core types and public API for Finnish noun declension (keinontolibrary)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[lints]
workspace = true
