[package]
name = "keinontolibrary-core"
description = "Core types and public API for Finnish noun declension (keinontolibrary)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
unicode-normalization = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
# Derive serde (De)Serialize on the public types (used by the server/CLI for JSON).
serde = ["dep:serde"]

[lints]
workspace = true
