[package]
name = "keinontolibrary-data"
description = "Packed lookup artifact and zero-copy loader for keinontolibrary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[lints]
workspace = true
