[package]
name = "keinontolibrary-data"
description = "Packed lookup artifact and zero-copy loader for keinontolibrary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
keinontolibrary-core = { workspace = true, features = ["serde"] }
keinontolibrary-rules = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
crc32fast = { workspace = true }

[lints]
workspace = true
