[package]
name = "keinontolibrary-ffi"
description = "FFI bindings scaffold (Rust API + C ABI; UniFFI/wasm/PyO3 to follow) for keinontolibrary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "keinontolibrary_ffi"
# `lib` for Rust consumers; `cdylib`/`staticlib` for C/Swift/Python/wasm linkers.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
keinontolibrary-core = { workspace = true, features = ["serde"] }
keinontolibrary-data = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
