[package]
name = "keinontolibrary-ingest"
description = "Build-time ingest: parse Kotus + Voikko sources into the packed lookup artifact."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "keinontolibrary-ingest"
path = "src/main.rs"

[dependencies]

[lints]
workspace = true
