[package]
name = "keinontolibrary-ingest"
description = "Build-time ingest: parse Kotus + Voikko sources into the packed lookup artifact."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "keinontolibrary_ingest"
path = "src/lib.rs"

[[bin]]
name = "keinontolibrary-ingest"
path = "src/main.rs"

[dependencies]
keinontolibrary-core = { workspace = true }
keinontolibrary-data = { workspace = true }
keinontolibrary-rules = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }

[[bin]]
name = "keinontolibrary-metrics"
path = "src/bin/metrics.rs"

[lints]
workspace = true
