[package]
name = "keinontolibrary-rules"
description = "Rule-based generator for Finnish nominal declension (Kotus classes 1-49 + gradation)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
keinontolibrary-core = { workspace = true }
serde = { workspace = true }
toml = "0.8"

[dev-dependencies]
keinontolibrary-data = { workspace = true }

[lints]
workspace = true
