[package]
name = "keinontolibrary-server"
description = "axum HTTP service exposing declension lookups (the container deployment)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "keinontolibrary_server"
path = "src/lib.rs"

[[bin]]
name = "keinontolibrary-server"
path = "src/main.rs"

[dependencies]
keinontolibrary-core = { workspace = true, features = ["serde"] }
keinontolibrary-data = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lints]
workspace = true
